Simplify protobuf API
